new file:   x86_64/png2c

--- a/tool/png2c/Makefile
+++ b/tool/png2c/Makefile
@@ -1,24 +1,23 @@
-CFLAGS=-I. -g -Wall -Werror
-OBJS=main.o
-ENVPATH=
+CFLAGS = -I. -g -Wall -Werror
+OBJS = main.o
+ENVPATH =
 
 ifeq ($(OS), Windows_NT)
-	ENVPATH = $(OS)/x86_64
+	ENVPATH = Windows_NT/x86_64
 	LIBS += -lpng -lz
 else
 	UNAME_S := $(shell uname -s)
 	ifeq ($(UNAME_S), Linux)
-		LDFLAGS=-static
+		LDFLAGS = -static
 		ENVPATH = linux/x86_64
 		LIBS += -lpng -lz
 	endif
 	ifeq ($(UNAME_S), Darwin)
+		# 固定でIntelバイナリを出力
 		ENVPATH = osx/x86_64
-		LIBS += ./lib/$(ENVPATH)/libpng.a ./lib/$(ENVPATH)/libz.a
-		ARCH := $(shell uname -m)
-		ifeq ($(ARCH), arm64)
-			CFLAGS += -target x86_64-apple-macos11
-		endif
+		CFLAGS += -arch x86_64
+		LDFLAGS += -arch x86_64
+		LIBS += ./lib/osx/x86_64/libpng.a ./lib/osx/x86_64/libz.a
 	endif
 endif
 
@@ -30,16 +29,18 @@ TARGET = ./$(ENVPATH)/png2c
 $(TARGET): $(OBJS)
 	mkdir -p $(ENVPATH)
 	g++ $(CFLAGS) $(LDFLAGS) -o $@ $^ $(LIBS)
-ifeq ($(OS), Windows_NT)
-	# List and copy necessary DLLs
-	ldd $(TARGET) | grep '/mingw64/' | awk '{print $$3}' | xargs -I {} cp {} $(ENVPATH)/
-endif
+
 ifeq ($(UNAME_S), Darwin)
-	cp $(TARGET) ./osx/arm64/
+	mkdir -p ./osx/arm64
+	cp $(TARGET) ./osx/arm64/png2c
+endif
+
+ifeq ($(OS), Windows_NT)
+	ldd $(TARGET) | grep '/mingw64/' | awk '{print $$3}' | xargs -I {} cp {} $(ENVPATH)/
 endif
 
 clean:
-	rm -rf $(TARGET) *.o
+	rm -rf $(TARGET) *.o ./osx/arm64/png2c
 
 run:
 	./$(TARGET) ./test_png/test.png > ./test_png/test.png.cpp
