--- a/.github/workflows/devto.yml
+++ b/.github/workflows/devto.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Publish to DEV.to
-        uses: sinedied/publish-devto@v1  # ← 修正ポイント
+        uses: sinedied/publish-devto@v1
         with:
-          api_key: ${{ secrets.DEVTO_API_KEY }}
+          devto_key: ${{ secrets.DEVTO_API_KEY }}
           files: docs/index.md
